--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@web3modal/wagmi": "3.5.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@web3modal/wagmi": "3.5.7",
+    "react-router-dom": "^6.23.1",
     "wagmi": "1.4.13"
   },
   "devDependencies": {
