--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,7 @@
     "typeRoots": ["./typeRoots/*"],
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     },
     "target": "ES2020",
     "useDefineForClassFields": true,
