--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
   },
   "dependencies": {
     "@web3modal/wagmi": "3.5.7",
+    "dayjs": "^1.11.11",
+    "ethers": "^6.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
-    "wagmi": "1.4.13"
+    "swr": "^2.2.5",
+    "wagmi": "1.4.13",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20.12.5",
