--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lint-staged": "^15.2.5",
     "postcss": "^8.4.38",
     "prettier": "3.3.0",
+    "prettier-plugin-tailwindcss": "^0.6.1",
     "sass": "^1.77.4",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
