--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "sass": "^1.77.4",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
