--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@web3modal/wagmi": "3.5.7",
+    "@tanstack/react-query": "^5.45.0",
+    "@web3modal/wagmi": "^5.0.1",
     "antd": "^5.18.1",
     "dayjs": "^1.11.11",
     "ethers": "^5.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
-    "swr": "^2.2.5",
-    "wagmi": "1.4.13",
+    "viem": "2.x",
+    "wagmi": "^2.10.2",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
