--- a/package.json
+++ b/package.json
@@ -11,17 +11,22 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "prepare": "husky"
+    "prepare": "husky",
+    "typechain:generate": "typechain --target=ethers-v5 --out-dir src/contracts/interface 'src/contracts/abis/*.json'"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.45.0",
+    "@typechain/ethers-v5": "^11.1.2",
     "@web3modal/wagmi": "^5.0.1",
     "antd": "^5.18.1",
+    "bignumber.js": "^9.1.2",
     "dayjs": "^1.11.11",
     "ethers": "^5.7.0",
+    "numbro": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
+    "typechain": "8.3.2",
     "viem": "2.x",
     "wagmi": "^2.10.2",
     "zustand": "^4.5.2"
