--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.39",
     "prettier": "3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
