--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postcss": "^8.4.39",
     "prettier": "3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
+    "sass": "^1.77.8",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
