--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.50.1",
     "@web3modal/wagmi": "^5.0.6",
+    "antd": "^5.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.414.0",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.24.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
