--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.39",
+    "postcss-pxtorem": "^6.1.0",
     "prettier": "3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "sass": "^1.77.8",
