--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fuels/connectors": "^0.36.1",
+    "@fuels/react": "^0.36.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.1",
@@ -18,6 +20,7 @@
     "@web3modal/wagmi": "^5.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "fuels": "^0.96.1",
     "lucide-react": "^0.414.0",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
