--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "react-router-dom": "^6.24.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
-    "viem": "^2.17.3",
-    "wagmi": "^2.10.10",
+    "viem": "2.20.1",
+    "wagmi": "2.12.7",
+    "@wagmi/core": "2.13.4",
+    "@web3modal/core": "5.0.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
