feat: reown upgrade

--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-slot": "^1.1.2",
+    "@reown/appkit": "^1.6.9",
+    "@reown/appkit-adapter-wagmi": "^1.6.9",
     "@tailwindcss/postcss": "^4.0.10",
     "@tailwindcss/vite": "^4.0.10",
-    "@tanstack/react-query": "^5.50.1",
-    "@web3modal/wagmi": "^5.0.6",
+    "@tanstack/react-query": "^5.67.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.477.0",
@@ -29,8 +30,8 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.10",
-    "viem": "^2.17.3",
-    "wagmi": "^2.10.10",
+    "viem": "^2.23.9",
+    "wagmi": "^2.14.12",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
